# bijective_transliterator

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_release.sh  run.sh
examples/: she_walks.txt  she_walks_transliteration.txt  shiroka_strana.txt  shiroka_strana_transliteration.txt
include/: RuEnTransliterator.h
rules/: rules_list.txt
sources/: RuEnTransliterator.cpp  english_to_russian.cpp  main.cpp  russian_to_english.cpp  tests.cpp
sources/automata/: deterministic_automaton.cpp  deterministic_automaton.h  determinizer.cpp  determinizer.h  nondeterministic_automaton.cpp  nondeterministic_automaton.h
sources/rules/: automata_creator.cpp  automata_creator.h  rules_processor.cpp  rules_processor.h
sources/symbolic_analyser/: encoding.cpp  encoding.h
sources/tester/: tester.cpp  tester.h
sources/translator/: translator.cpp  translator.h
sources/utils/: file_io_utils.cpp  file_io_utils.h  io_utils.cpp  io_utils.h
